# shaderpulse

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
compiler/: shaderpulse.cpp
example/: compute.glsl  constructor.glsl  ifelse.glsl  mandelbrot.glsl  mandelbrot.mlir  passthrough_fragment.glsl  passthrough_vertex.glsl  square.glsl  test.frag  while.glsl
example/argmax/: CMakeLists.txt  argmax.cpp  argmax.glsl
example/mandelbrot/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.glsl
include/AST/: AST.h  ASTVisitor.h  PrinterASTVisitor.h  Types.h  Util.h
include/Analysis/: Scope.h  SemanticAnalyzer.h  SymbolTable.h  TypeChecker.h
include/CodeGen/: MLIRCodeGen.h  Swizzle.h  TypeConversion.h
include/Lexer/: Lexer.h  Token.h  TokenDefs.h
include/Parser/: Parser.h
include/Preprocessor/: Preprocessor.h
lib/AST/: ASTVisitor.cpp  CMakeLists.txt  PrinterASTVisitor.cpp  Util.cpp
lib/Analysis/: CMakeLists.txt  Scope.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  TypeChecker.cpp
lib/CodeGen/: CMakeLists.txt  MLIRCodeGen.cpp  Swizzle.cpp  TypeConversion.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Preprocessor/: CMakeLists.txt  Preprocessor.cpp
standalone/: shaderpulse.cpp
test/: CMakeLists.txt  functions.glsl  loops.glsl  vardecl.glsl
test/Analysis/: cf_conditional.glsl  cf_switch.glsl  control_flow.glsl  functions.glsl  loops.glsl  vardecl.glsl
test/CodeGen/: arrays.glsl  arrays.mlir  binary_expressions.glsl  binary_expressions.mlir  cf_do_while.glsl  cf_if_else.glsl  cf_if_else.mlir  cf_loops.glsl  cf_loops.mlir  cf_loops_for.glsl  cf_loops_while.glsl  cf_loops_while_break.glsl  cf_loops_while_continue.glsl  conversions.glsl  functions.glsl  functions.mlir  functions_builtin.glsl  functions_builtin.mlir  interface_blocks.glsl  interface_blocks.mlir  interface_blocks.tlsl  run_tests.sh  scopes.glsl  scopes.mlir  structs.glsl  structs.mlir  swizzle.glsl  swizzle.mlir  type_conversion_scalar.glsl  type_conversion_scalar.mlir  type_conversion_vector.glsl  type_conversion_vector.mlir  unary_expressions.glsl  unary_expressions.mlir  vars.glsl  vectors.glsl  vectors.mlir
test/Lexer/: LexerTest.cpp
test/Parser/: ParserTest.cpp
unittests/: CMakeLists.txt
unittests/Lexer/: LexerTest.cpp
unittests/Parser/: ParserTest.cpp
